added css to the site

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/Pizza-sliders.html"> Pizza sliders</a></li>
-        <li><a href="./recipes/Parmesan-fingerlings.html"> Roasted garlic-parmesan fingerling potatoes </a></li>
-        <li><a href="./recipes/Baked-Haddock.html">Baked haddock</a></li>
-    </ul>
+<body class="background">
+    <h1 class="text" id="heading">Odin Recipes</h1>
+    <div class="row">
+        <div class="column">
+            <a href="./recipes/Pizza-sliders.html"><img class="frontpage"src="./img/pizza-sliders.webp" alt="pizzaslider"></a>
+        </div>
+        <div class="column">    
+            <a href="./recipes/Parmesan-fingerlings.html"><img class="frontpage" src="./img/fingerlings.webp" alt="fingerlings"></a>
+        </div>
+        <div class="column">   
+            <a href="./recipes/Baked-Haddock.html"><img class="frontpage" src="./img/haddock.webp"alt="haddock"></a>
+        </div>
+    </div>
 </body>
 </html>
