--- a/recipes/Parmesan-fingerlings.html
+++ b/recipes/Parmesan-fingerlings.html
@@ -5,32 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roasted Garlic-Parmesan Fingerling Potatoes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-    <a href="../index.html"> homepage </a>
-    <h1>Roasted Garlic-Parmesan Fingerling Potatoes</h1>
-    <img src="../img/fingerlings.webp" alt="Roasted Garlic-Parmesan Fingerling Potatoes with chicken" width="400">
-    <h2> Description </h2>
-    <p> This roasted fingerling potato recipe is simple and perfect. Fingerlings have a natural hint of sweetness that makes them a nice alternative to other potatoes.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 pound fingerling potatoes, halved lengthwise</li>
-        <li>2 cloves garlic, minced</li>
-        <li>2 tablespoons grated Parmesan cheese</li>
-        <li>2 1 teaspoon lemon zest</li>
-        <li>½ teaspoon salt</li>
-        <li>¼ teaspoon freshly ground black pepper</li>
-        <li>2 tablespoons olive oil</li>
-        <li>1 tablespoon butter</li>
-        <li>2 tablespoons chopped fresh parsley</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
-        <li>Toss potatoes, garlic, Parmesan cheese, lemon zest, salt, and black pepper together in a bowl. Drizzle with olive oil and toss again until evenly combined.</li>
-        <li>Heat a cast-iron skillet over medium-high heat. Add butter and heat until melted. Add potatoes; cook and toss until evenly coated with butter, about 2 minutes. Move the skillet to the preheated oven.</li>
-        <li>Roast in the preheated oven until soft, 15 to 20 minutes, tossing halfway through. Remove from oven and top with parsley.</li>
-    </ol>
-
+<body class="background">
+    <div class="text">
+        <a href="../index.html"> homepage </a>
+        <h1 id="heading">Roasted Garlic-Parmesan Fingerling Potatoes</h1>
+        <img class="recipe" src="../img/fingerlings.webp" alt="Roasted Garlic-Parmesan Fingerling Potatoes with chicken" >
+        <h2> Description </h2>
+        <p> This roasted fingerling potato recipe is simple and perfect. Fingerlings have a natural hint of sweetness that makes them a nice alternative to other potatoes.</p>
+        <h3>Ingredients</h3>
+        <ul id="list">
+            <li>1 pound fingerling potatoes, halved lengthwise</li>
+            <li>2 cloves garlic, minced</li>
+            <li>2 tablespoons grated Parmesan cheese</li>
+            <li>2 1 teaspoon lemon zest</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ teaspoon freshly ground black pepper</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 tablespoon butter</li>
+            <li>2 tablespoons chopped fresh parsley</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol id="list">
+            <li>Preheat the oven to 425 degrees F (220 degrees C).</li>
+            <li>Toss potatoes, garlic, Parmesan cheese, lemon zest, salt, and black pepper together in a bowl. Drizzle with olive oil and toss again until evenly combined.</li>
+            <li>Heat a cast-iron skillet over medium-high heat. Add butter and heat until melted. Add potatoes; cook and toss until evenly coated with butter, about 2 minutes. Move the skillet to the preheated oven.</li>
+            <li>Roast in the preheated oven until soft, 15 to 20 minutes, tossing halfway through. Remove from oven and top with parsley.</li>
+        </ol>
+    </div>
 </body>
 </html>
