--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="background">
-    <h1 class="text" id="heading">Odin Recipes</h1>
-    <div class="row">
-        <div class="column">
-            <a href="./recipes/Pizza-sliders.html"><img class="frontpage"src="./img/pizza-sliders.webp" alt="pizzaslider"></a>
-        </div>
-        <div class="column">    
-            <a href="./recipes/Parmesan-fingerlings.html"><img class="frontpage" src="./img/fingerlings.webp" alt="fingerlings"></a>
-        </div>
-        <div class="column">   
-            <a href="./recipes/Baked-Haddock.html"><img class="frontpage" src="./img/haddock.webp"alt="haddock"></a>
-        </div>
+    <div class="text">
+        <h1 class="text" id="heading">Odin Recipes</h1>
+        <figure class="row">
+            <div class="column">
+                <a href="./recipes/Pizza-sliders.html"><img class="frontpage"src="./img/pizza-sliders.webp" alt="pizzaslider"></a>
+                <figcaption class="caption">Pizza Sliders</figcaption>
+            </div>
+            <div class="column">    
+                <a href="./recipes/Parmesan-fingerlings.html"><img class="frontpage" src="./img/fingerlings.webp" alt="fingerlings"></a>
+                <figcaption class="caption">Parmesan Fingerlings</figcaption>
+            </div>
+            <div class="column">   
+                <a href="./recipes/Baked-Haddock.html"><img class="frontpage" src="./img/haddock.webp"alt="haddock"></a>
+                <figcaption class="caption">Baked Haddock</figcaption>
+            </div>
+        </figure>
     </div>
 </body>
 </html>
