--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div class="text">
         <h1 class="text" id="heading">Odin Recipes</h1>
         <figure class="row">
-            <div class="column">
+            <figure class="column">
                 <a href="./recipes/Pizza-sliders.html"><img class="frontpage"src="./img/pizza-sliders.webp" alt="pizzaslider"></a>
                 <figcaption class="caption">Pizza Sliders</figcaption>
-            </div>
-            <div class="column">    
+            </figure>
+            <figure class="column">    
                 <a href="./recipes/Parmesan-fingerlings.html"><img class="frontpage" src="./img/fingerlings.webp" alt="fingerlings"></a>
                 <figcaption class="caption">Parmesan Fingerlings</figcaption>
-            </div>
-            <div class="column">   
+            </figure>
+            <figurev class="column">   
                 <a href="./recipes/Baked-Haddock.html"><img class="frontpage" src="./img/haddock.webp"alt="haddock"></a>
                 <figcaption class="caption">Baked Haddock</figcaption>
-            </div>
+            </figure>
         </figure>
     </div>
 </body>
